[gd_scene load_steps=4 format=3 uid="uid://8t3nkhq5682t"]

[ext_resource type="FontFile" uid="uid://bg3sgmjoqpncd" path="res://Scenes/ui/Puffy-gxW55.otf" id="1_3n75p"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_aayaa"]

[sub_resource type="Theme" id="Theme_lk6nl"]
default_font = ExtResource("1_3n75p")
default_font_size = 90

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_aayaa")

[node name="Timer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
offset_left = 1053.0
offset_top = 14.0
offset_right = 1320.0
offset_bottom = 88.0
theme = SubResource("Theme_lk6nl")
text = "Timer:
"

[node name="JumpCounterLabel" type="Label" parent="."]
offset_left = 1935.0
offset_top = 7.0
offset_right = 2408.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("1_3n75p")
theme_override_font_sizes/font_size = 90
text = "Jump Counter:

"

[node name="TimerOut" type="Label" parent="."]
offset_left = 1513.0
offset_top = 11.0
offset_right = 1780.0
offset_bottom = 97.0
theme = SubResource("Theme_lk6nl")
theme_override_font_sizes/font_size = 90
text = "

"

[node name="JumpOut" type="Label" parent="."]
offset_left = 2625.0
offset_top = 7.0
offset_right = 3098.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("1_3n75p")
theme_override_font_sizes/font_size = 90
text = "


"

[node name="HighestProgLabel" type="Label" parent="."]
offset_top = 14.0
offset_right = 614.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("1_3n75p")
theme_override_font_sizes/font_size = 60
text = "Highest Progress:

"

[node name="HighestProgOut" type="Label" parent="."]
offset_left = 515.0
offset_top = 13.0
offset_right = 1129.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("1_3n75p")
theme_override_font_sizes/font_size = 60
text = "0


"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
